--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -179,7 +179,7 @@
     "# stellar mass\n",
     "stellar_mass = subhalos[\"SubhaloMassType\"][subhalo_idx,4] * 1e10\n",
     "\n",
-    "# color (maybe change so that we have all magnitudes instead)\n",
+    "# color\n",
     "color_ui = subhalos[\"SubhaloStellarPhotometrics\"][subhalo_idx,0] - subhalos[\"SubhaloStellarPhotometrics\"][subhalo_idx,6]\n",
     "\n",
     "# radius\n",
